# cpp_projects

absl-code/: .bazelrc  MODULE.bazel  README.md  WORKSPACE
absl-code/src/: BUILD.bazel  absl_test.cc  absl_usage.cc  glog_usage.cc  hello_world.cc  lang_test.cc
all_project/: BUILD.bazel  MemoryBlock.cc  Point.cc  WORKSPACE  code.cc  copy.cc  exception.cc  file.cc  file_test.cc  foo.cc  lvalue_reference.cc  m.cc  main.cc  man.c  modern.cc  queue.h  queue_test.cc  queue_usage.cc  regex.cc  rv1.cc  rv2.cc  rv3.cc  rv4.cc  rvalue_reference.cc  sample.cc  sanitizers.cc  stack_trace.cc  stack_trace.s  t.cc  unwind.cc  with_main_test.cc
